correciones salto, manejo de colisiones con enemigo,fruit,vida

--- a/MyGame/settings/settings_game.json
+++ b/MyGame/settings/settings_game.json
@@ -11,7 +11,7 @@
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-                [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                [0,0,0,0,0,0,0,0,0,2,0,0,0,0,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,1,1,1,1,1,1,0,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
@@ -19,7 +19,24 @@
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                 [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]
-            ]
+            ],
+            "enemies":
+            {
+                "coordenates":
+                [
+                    {
+                        "x":700,
+                        "y":500
+                    },                
+                    {
+                        "x":40,
+                        "y":380
+                    }
+                ],
+                "speed_walk":15,
+                "speed_run":40,
+                "frame_rate":100
+            }
         },
 
         "level_2":
@@ -31,7 +48,7 @@
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                 [1,1,1,1,1,1,0,0,0,0,0,0,0,0,1,1,1,1,1,1],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-                [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                [0,0,0,0,0,0,0,0,0,2,0,0,0,0,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,1,1,1,1,1,1,0,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
@@ -41,7 +58,28 @@
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                 [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]
-            ]
+            ],
+            "enemies":
+            {
+                "coordenates":
+                [
+                    {
+                        "x":700,
+                        "y":500
+                    },                
+                    {
+                        "x":250,
+                        "y":60
+                    },
+                    {
+                        "x":40,
+                        "y":340
+                    }
+                ],
+                "speed_walk":18,
+                "speed_run":45,
+                "frame_rate":100
+            }
         },
         
         "level_3":
@@ -50,12 +88,12 @@
             [
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-                [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                [0,0,0,0,2,0,0,0,0,0,0,0,0,0,0,0,2,0,0,0],
                 [0,0,1,1,1,1,0,0,0,0,0,0,0,0,1,1,1,1,0,0],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-                [0,0,0,0,0,0,1,1,0,0,0,0,1,1,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+                [0,0,0,0,0,0,1,1,0,0,0,0,1,1,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                 [1,1,1,1,1,1,0,0,0,0,0,0,0,0,1,1,1,1,1,1],
@@ -63,7 +101,32 @@
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                 [1,1,1,0,0,0,1,1,1,1,1,1,1,1,0,0,0,1,1,1]
-            ]
+            ],
+            "enemies":
+            {
+                "coordenates":
+                [
+                    {
+                        "x":400,
+                        "y":500
+                    },                
+                    {
+                        "x":570,
+                        "y":340
+                    },                
+                    {
+                        "x":200,
+                        "y":220
+                    },                
+                    {
+                        "x":0,
+                        "y":60
+                    }
+                ],
+                "speed_walk":20,
+                "speed_run":60,
+                "frame_rate":100
+            }
         }
     }
 }
