--- a/MyGame/settings/settings_game.json
+++ b/MyGame/settings/settings_game.json
@@ -1,4 +1,34 @@
 {
+    "config":
+    {
+        "player":
+        {
+            "init_pos_x":0,
+            "init_pos_y":480,
+            "frame_rate":50,
+            "speed_walk":15,
+            "speed_run":25,
+            "gravity":1
+        },
+        "clock":
+        {
+            
+        },        
+        "ancho":800,
+        "alto":600,
+        "fps":60,
+        "rows":15,
+        "columns":20,
+        "size_block":40,
+        "tittle_window":"DBPY",
+        "path_background_stage":"assets/background/fondo2.png",
+        "path_background_menu":"assets/background/Kame House Wallpaper - iXpap.jpg",
+        "limit_time":30000,
+        "text_color_normal":[255, 255, 255],
+        "text_color_alert":[255, 255, 255],
+        "font_size":25,
+        "font_path":"font/font.ttf"
+    },
     "stages":{
         "level_1":
         {
@@ -100,7 +130,7 @@
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
                 [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-                [1,1,1,0,0,0,1,1,1,1,1,1,1,1,0,0,0,1,1,1]
+                [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]
             ],
             "enemies":
             {
@@ -126,6 +156,23 @@
                 "speed_walk":20,
                 "speed_run":60,
                 "frame_rate":100
+            },
+            "trap":
+            {
+                "coordenates":
+                [
+                    {
+                        "x":250,
+                        "y":90
+                    },                
+                    {
+                        "x":700,
+                        "y":530
+                    }
+                ],
+                "speed":20,
+                "frame":50,
+                "move_time":0
             }
         }
     }
